--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/contactform/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Preact</title>
-    <script type="module" crossorigin src="/x-form.js"></script>
-    <link rel="stylesheet" crossorigin href="/x-form.css">
+    <script type="module" crossorigin src="/contactform/x-form.js"></script>
+    <link rel="stylesheet" crossorigin href="/contactform/x-form.css">
   </head>
   <body>
     <x-subscriberform></x-subscriberform>
